WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244867
[JSC] Fix String#replace DFG handling to handle substitutions
https://bugs.webkit.org/show_bug.cgi?id=244867
Summary
[JSC] Fix String#replace DFG handling to handle substitutions
Yusuke Suzuki
Reported
2022-09-06 16:18:05 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-09-06 16:21:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4079
EWS
Comment 2
2022-09-07 01:20:37 PDT
Committed
254217@main
(270603071384): <
https://commits.webkit.org/254217@main
> Reviewed commits have been landed. Closing PR #4079 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-07 01:21:18 PDT
<
rdar://problem/99639396
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug