Cherry-pick 270603071384. rdar://problem/99639396

[JSC] Fix String#replace DFG handling to handle substitutions
    https://bugs.webkit.org/show_bug.cgi?id=244867

    Reviewed by Saam Barati.

    We accidentally dropped backreference substitution feature on DFG / FTL String#replace with string case.
    This patch adds it to DFG operations. Also, DFG strength reduction should not perform String#replace with String
    reductions if watchpoint is not watched.

    1. Add backreference substitutions to DFG operationStringReplaceStringString.
    2. We also add operationStringReplaceStringStringWithoutSubstitution since we can know this information if replace string is a constant.
       And this is common case (Speedometer2.1's replace string does not include substitutions and it is constant).
    3. We watch string watchpoint when performing strength reduction onto StringReplace + String case.

    * JSTests/stress/replace-string-constant-fold-substitution.js: Added.
    (shouldBe):
    (test):
    (test2):
    * JSTests/stress/replace-string-substitution.js: Added.
    (shouldBe):
    (test):
    (test2):
    * Source/JavaScriptCore/dfg/DFGOperations.cpp:
    (JSC::DFG::stringReplaceStringString):
    (JSC::DFG::JSC_DEFINE_JIT_OPERATION):
    * Source/JavaScriptCore/dfg/DFGOperations.h:
    * Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:
    * Source/JavaScriptCore/dfg/DFGStrengthReductionPhase.cpp:
    (JSC::DFG::StrengthReductionPhase::handleNode):
    * Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
    (JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):
    * Source/JavaScriptCore/runtime/StringPrototype.cpp:
    (JSC::substituteBackreferencesSlow):
    * Source/JavaScriptCore/runtime/StringPrototype.h:

    Canonical link: https://commits.webkit.org/254217@main

Canonical link: https://commits.webkit.org/252432.351@safari-7614-branch